# networking

./: .gitignore  Cargo.toml  LICENSE  README.md
bashscripts/: hosts.txt
docker_x509/ca/: ca.crt  ca.srl  make_clients.sh
docker_x509/central/: central.crt  central.csr  central.key  central.pem
docker_x509/ecu1/: ecu1.crt  ecu1.csr  ecu1.key  ecu1.pem
docker_x509/ecu2/: ecu2.crt  ecu2.csr  ecu2.key  ecu2.pem
docker_x509/ecu3/: ecu3.crt  ecu3.csr  ecu3.key  ecu3.pem
docker_x509/ecu4/: ecu4.crt  ecu4.csr  ecu4.key  ecu4.pem
docker_x509/ecu5/: ecu5.crt  ecu5.csr  ecu5.key  ecu5.pem
local_x509/ca/: ca.crt  ca.key  ca.srl  make_clients.sh
local_x509/client/: client.crt  client.csr  client.key  client.pem  client_0.crt  client_0.csr  client_0.key  client_0.pem
local_x509/server/: server.crt  server.csr  server.key  server.pem
src/: client.new.rs  client.old.rs  client.rs  helper.rs  main.rs  mainbak.rs  server.rs
src/ca/: ca.crt  ca.key  ca.srl
src/client/: client_0.crt  client_0.csr  client_0.key  client_0.p12  client_0.pem
src/server/: localhost.bundle.crt  localhost.crt  localhost.csr  localhost.key  localhost.pubkey
