[package]
name = "rust-mtls-example"
version = "0.1.0"
authors = ["littleRound"]
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["rustls-tls-manual-roots"] }
warp = { version = "0.3", features = ["tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = {version = "4.2.2", features = ["derive"]}
